ASSERT fails in updateState ACTION_DRAW case https://bugs.webkit.org/show_bug.cgi?id=73351

Patch by Armand Navabi <armand.navabi@gmail.com> on 2011-12-02
Reviewed by James Robinson.

Changed ASSERT in CCSchedulerStateMachine to include ( || !m_visible) as discussed in bug
report. m_commitState is set to COMMIT_STATE_WAITING_FOR_FIRST_DRAW if m_needsCommit or
!m_visible, so in ACTION_DRAW the assert should have both conditions.

* platform/graphics/chromium/cc/CCSchedulerStateMachine.cpp:
(WebCore::CCSchedulerStateMachine::updateState):

Canonical link: https://commits.webkit.org/90374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101911 268f45cc-cd09-0410-ab3c-d52691b4dbfc